<resources>
    <string name="app_name">Whistle</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sp_confederation">Select a Confederation:</string>
    <string name="sp_country">Select a Country:</string>
    <string name="sp_championship">Select a Championship:</string>
    <string name="sp_team">Select a Team:</string>
    <string name="sp_nextMatches">Next matches:</string>
    <string name="sp_collapse">Hide filters</string>
    <string name="sp_ShowFilters">Show Filters</string>
    <string name="sp_teams">Teams:</string>
    <string name="sp_return">Return</string>
    <string name="sp_hide_filters_match">Hide filters</string>
    <string name="sp_show_filters_match">Show filters</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sp_Versus">x</string>
    <string name="sp_RefereeCaption">Referee:</string>
    <string name="sp_PlayedMatches">Played matches:</string>
    <string name="sp_GoalsFor">GF:</string>
    <string name="sp_GoalsAgainst">GA:</string>
</resources>
