<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:layout_editor_absoluteX="34dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewTopTeams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutTeams"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adViewTopTeams">

            <TableRow
                android:id="@+id/trHiddenFiltersTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewShowFiltersTeams"
                        android:layout_width="36dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/sp_ShowFilters"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_input_add" />

                </android.support.constraint.ConstraintLayout>
            </TableRow>

            <TableRow
                android:id="@+id/trFiltersTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageViewCollapseFiltersTeams"
                        android:layout_width="36dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/sp_collapse"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_delete" />

                    <Spinner
                        android:id="@+id/spinner_confTeams"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txViewConfedTeams" />

                    <Spinner
                        android:id="@+id/spinner_countryTeams"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txViewCountryTeams" />

                    <Spinner
                        android:id="@+id/spinner_champTeams"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txViewChampTeams" />

                    <TextView
                        android:id="@+id/txViewCountryTeams"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/sp_country"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_confTeams" />

                    <TextView
                        android:id="@+id/txViewChampTeams"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/sp_team"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_countryTeams" />

                    <TextView
                        android:id="@+id/txViewConfedTeams"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/sp_confederation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </TableRow>

            <TextView
                android:id="@+id/tvTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sp_teams"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trFiltersTeams" />

            <ScrollView
                android:id="@+id/svTeams"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTeams">

            </ScrollView>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutTeamData"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adViewTopTeams">

            <TextView
                android:id="@+id/tvReturnTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sp_return"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompleteName"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvCompleteName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@CompleteName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewFavoriteOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/tvCompleteName"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageView
                android:id="@+id/imageViewFavoriteOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/tvCompleteName"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/tvChampionships"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@Championships"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCompleteName" />

            <TextView
                android:id="@+id/tvMatchesPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sp_PlayedMatches"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvChampionships" />

            <TextView
                android:id="@+id/tvTotalMatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@3 (1/1/1)"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMatchesPlayed"
                app:layout_constraintStart_toEndOf="@+id/tvMatchesPlayed" />

            <TextView
                android:id="@+id/tvGoalsScoredLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/sp_GoalsFor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTotalMatches"
                app:layout_constraintStart_toEndOf="@+id/tvTotalMatches" />

            <TextView
                android:id="@+id/tvGoalsScoredNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@1"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGoalsScoredLabel"
                app:layout_constraintStart_toEndOf="@+id/tvGoalsScoredLabel" />

            <TextView
                android:id="@+id/tvGoalsConcededLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/sp_GoalsAgainst"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGoalsScoredNumber"
                app:layout_constraintStart_toEndOf="@+id/tvGoalsScoredNumber" />

            <TextView
                android:id="@+id/tvGoalsConcededNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@1"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGoalsConcededLabel"
                app:layout_constraintStart_toEndOf="@+id/tvGoalsConcededLabel" />

        </android.support.constraint.ConstraintLayout>

        <!--<com.google.android.gms.ads.AdView-->
            <!--android:id="@+id/adViewBottomTeams"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--app:adSize="BANNER"-->
            <!--app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent" />-->

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>